Bugfix: Weird spacing issues

--- a/src/components/page/styles.module.css
+++ b/src/components/page/styles.module.css
@@ -42,8 +42,8 @@
   flex-direction: column;
   flex: 1 0 auto;
   align-items: stretch;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   width: 100%;
 }
 .layout { max-width: 700px; }
